# edge-weapon-detection-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  compose.yaml  s -ExecutionPolicy RemoteSigned) ; (& dDessertationedge-weapon-detection-platformagent.venvScriptsActivate.ps1)
.claude/skills/continue-project/: SKILL.md
agent/: .gitignore  README.md  pyproject.toml
agent/src/weapon_detection_agent/: __init__.py  app.py  main.py
agent/src/weapon_detection_agent/activation/: __init__.py  backend_client.py  errors.py  key_resolver.py  models.py  service.py
agent/src/weapon_detection_agent/config/: __init__.py  paths.py  settings.py
agent/src/weapon_detection_agent/logging/: __init__.py  configuration.py  formatter.py  redaction.py
agent/src/weapon_detection_agent/persistence/: __init__.py  config_cache_repository.py  database.py  device_identity_repository.py  errors.py  models.py  schema.py
agent/src/weapon_detection_agent/runtime/: __init__.py  startup.py  state.py
agent/tests/: test_activation_client.py  test_activation_key_resolver.py  test_activation_models.py  test_activation_service.py  test_activation_service_integration.py  test_app_lifespan.py  test_app_startup.py  test_config_cache_repository.py  test_database.py  test_device_identity_repository.py  test_logging.py  test_paths.py  test_repository_integration.py  test_runtime_startup.py  test_runtime_state.py  test_schema.py  test_settings.py
agent/tests/contract/: conftest.py  test_backend_activation_contract.py
agent/tests/integration/: test_agent_activation_lifespan.py
agent/tests/support/: __init__.py  backend_process.py
backend/: .dockerignore  Dockerfile  WeaponDetection.slnx
backend/src/WeaponDetection.Api/: Program.cs  WeaponDetection.Api.csproj  WeaponDetection.Api.http  appsettings.json
backend/src/WeaponDetection.Application/: WeaponDetection.Application.csproj
backend/src/WeaponDetection.Domain/: ActivationKey.cs  ActivationKeyStatus.cs  AdminSession.cs  AdminUser.cs  Branch.cs  Camera.cs  Device.cs  DeviceActivationStatus.cs
deployment/: README.md  logs.ps1  reset.ps1  start.ps1  stop.ps1
design/stitch/: ANGULAR-IMPLEMENTATION-MAP.md  DESIGN-SYSTEM.md  SCREEN-INVENTORY.md
docs/architecture/: software-architecture-document.md
docs/foundation/: development-workflow.md  engineering-principles.md  project-charter.md  software-requirements-specification.md  vision.md
frontend/: .dockerignore  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  proxy.conf.json
frontend/src/: index.html  styles.css
postman/: WeaponDetection.postman_collection.json  WeaponDetection.postman_environment.json
specs/features/: FS-01-authentication-session-management.md  FS-02-branch-device-onboarding-activation.md  FS-02-branch-device-onboarding.md  FS-03-branch-camera-management.md
specs/implementation-plans/: IP-01-backend-angular-foundation.md  IP-02-jetson-agent-foundation.md  IP-03-branch-camera-management.md  IP-04-central-server-containerization.md
(+165 files in other folders)
